--- a/index.html
+++ b/index.html
@@ -43,25 +43,25 @@
     <script>
         // Liste des messages d'amour à afficher du 14/02/2025 au 31/12/2025
         const messages = [
-            "Je t'aime plus que tout ❤️",
-            "Notre histoire est ma plus belle aventure 💕",
-            "Chaque jour avec toi est un cadeau 🎁",
-            "Tu es mon plus beau rêve devenu réalité ✨",
-            "Rien n'est plus doux que ton sourire 😘",
-            "Je suis reconnaissant(e) de t'avoir dans ma vie 💖",
-            "Ton amour illumine mes jours 🌞",
-            "Avec toi, chaque moment est magique 🪄",
-            "Je chéris chaque instant passé à tes côtés 💑",
-            "Tu es mon âme sœur, aujourd'hui et toujours ❤️",
-            "Tu es la plus belle chose qui me soit arrivée 💕",
-            "Chaque seconde avec toi est précieuse ⏳",
-            "Je t’aime plus que les mots ne peuvent l’exprimer 🥰",
+            "Je t'aime plus que toi tu ne m'aimes ❤️",
+            "Je suis amoureux de toi Anna Blaszkiewicz (j'ai bien écrit ??)",
+            "Hop hop hop nouveau jour où je suis amoureux de toi",
+            "Tu me manques (ça se trouve le jour où tu vas voir celui là on sera ensemble...) ",
+            "Ok chatGPT dis à Anna que je l'aime ",
+            "Y'a un philosophe il a dit 'on comprend le sens de la vie uniquement quand on a trouvé une bonne raison de mourir' et il a pas tort je meurt pour toi tout les jours de l'année ",
+            "Regarde ils ont fait un émoji à ton image :🌞",
+            "Comment il va notre enfant ? t'sais le mec qui a aucune notion du temps ",
+            "Vu que c'est au hasard, j'ai rencontré ma belle-mère à ce jour ?",
+            "Je t'aime plus que toi tu ne m'aimes (y'en aura plusieurs des comme ça",
+            "T'es la plus belle chose qui me soit arrivée (après ça dépend si Paris a gagné la LDC le moment ou tu verras ce message tu seras la deuxième plus belle chose) 💕",
+            "On va à la salle aujourd'hui ? Séance en couple on fait les jambes.... ",
+            "Y'a pas assez de mots pour dire ce que je ressens pour toi",
             "Tu es la raison de mon sourire chaque matin ☀️",
             "Mon cœur bat pour toi et toi seul(e) 💓"
         ];
         
-        // Calcul du nombre total de jours du 14/02/2025 au 31/12/2025
-        const startDate = new Date(2025, 1, 14); // 14 février 2025
+        // Calcul du nombre total de jours du 13/02/2025 au 31/12/2025
+        const startDate = new Date(2025, 1, 13); // 13 février 2025
         const endDate = new Date(2025, 11, 31); // 31 décembre 2025
         const totalDays = Math.floor((endDate - startDate) / (1000 * 60 * 60 * 24)) + 1;
         
