--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         }
         
         // Calcul du jour unique entre 14/02/2025 et 31/12/2025
-        const today = new Date();
+        const today = new Date(2025, 1, 10);
         const dayIndex = Math.floor((today - startDate) / (1000 * 60 * 60 * 24));
         
         // Sélection d'un message unique sans répétition avant fin 2025
