--- a/index.html
+++ b/index.html
@@ -55,9 +55,22 @@
             "Je t'aime plus que toi tu ne m'aimes (y'en aura plusieurs des comme ça",
             "T'es la plus belle chose qui me soit arrivée (après ça dépend si Paris a gagné la LDC le moment ou tu verras ce message tu seras la deuxième plus belle chose) 💕",
             "On va à la salle aujourd'hui ? Séance en couple on fait les jambes.... ",
-            "Y'a pas assez de mots pour dire ce que je ressens pour toi",
-            "Tu es la raison de mon sourire chaque matin ☀️",
-            "Mon cœur bat pour toi et toi seul(e) 💓"
+            "Y'a pas assez de mots pour dire ce que je ressens pour toi sah ",
+            "Salut, ça fait 15 ans qu'on est ensemble aujourd'hui mon amoureuse !",
+            "Tu te rends compte que tu rends chaque moment ordinaire tellement spécial espèce sorcière",
+            "T'imagines que je dois écrire 322 phrases différentes pour te dire que je t'aime sans écrire la même chose chaque jour zebi le boloss",
+            "Oh la honte il est amoureux !!! Oui.",
+            "Tu veux m'épouser ?",
+            "Je t'aime. J'espère tu lis vraiment chaque jour sinon je suis en perte de fou....",
+            "C'est le jour où j'adopte officiellement Gigi. Tu peux lui annoncer",
+            "Bip bip... Oui Allo ? Oui, salut Anna tu vas bien ? C'est Julien PIDDAT tu sais celui qui t'aimes + que toi tu ne l'aimes ! Ah oui tu vois c'est bon",
+            "Aaron tu arrêtes de voler les jouets d'Ava !! Le mec qui se prend pour un daron",
+            "Oui Maman tu vas pouvoir rencontrer Anna ta belle-fille t'inquiète pas.",
+            "Bon ça y'est on est millionaire et marié ou toujours pas ?",
+            "Oh la chance que t'as aujourd'hui tu peux me demander tout ce que tu veux je dirais forcément oui.",
+            "Te amo ! (ça veut dire je t'aime en Allemand)",
+            "Anton Alekseïevitch Silaïev, Formé au HK Sarov1, il rejoint les équipes de jeunes du Torpedo Nijni Novgorod. En 2022, il commence sa carrière junior avec la Tchaïka, équipe junior du Torpedo, dans la MHL, la ligue junior russe. Tu te demandes pourquoi j'écrit ça ? Bah même moi je sais pas, mais ce que je sait c'est que je t'aime !",
+            
         ];
         
         // Calcul du nombre total de jours du 13/02/2025 au 31/12/2025
