--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script>
         // Liste des messages d'amour à afficher du 14/02/2025 au 31/12/2025
         const messages = [
-            "Je t'aime plus que toi tu ne m'aimes ❤️",
+            "Je t'aime plus que toi tu ne m'aimes Caca ❤️",
             "Je suis amoureux de toi Anna Blaszkiewicz (j'ai bien écrit ??)",
             "Hop hop hop nouveau jour où je suis amoureux de toi",
             "Tu me manques (ça se trouve le jour où tu vas voir celui là on sera ensemble...) ",
