--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script>
         // Liste des messages d'amour à afficher du 14/02/2025 au 31/12/2025
         const messages = [
-            "Je t'aime plus que toi tu ne m'aimes Caca ❤️",
+            "Je t'aime plus que toi tu ne m'aimes ❤️",
             "Je suis amoureux de toi Anna Blaszkiewicz (j'ai bien écrit ??)",
             "Hop hop hop nouveau jour où je suis amoureux de toi",
             "Tu me manques (ça se trouve le jour où tu vas voir celui là on sera ensemble...) ",
@@ -84,7 +84,7 @@
         }
         
         // Calcul du jour unique entre 14/02/2025 et 31/12/2025
-        const today = new Date(2025, 1, 11);
+        const today = new Date(2025, 1, 10);
         const dayIndex = Math.floor((today - startDate) / (1000 * 60 * 60 * 24));
         
         // Sélection d'un message unique sans répétition avant fin 2025
