--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script>
         // Liste des messages d'amour à afficher du 14/02/2025 au 31/12/2025
         const messages = [
+            "Joyeuse Saint Valentin en avance mon amoureuse, je suis désolé qu'on soit obligé d'aller dans un Airbnb éteint, je te promets une bien meilleure pour l'année prochaine avec de vrais cadeaux et de vraies fleurs. Je t'aime de tout mon coeur ❤️",
             "Je t'aime plus que toi tu ne m'aimes ❤️",
             "Je suis amoureux de toi Anna Blaszkiewicz (j'ai bien écrit ??)",
             "Hop hop hop nouveau jour où je suis amoureux de toi",
