--- a/index.html
+++ b/index.html
@@ -44,15 +44,28 @@
         // Liste des messages d'amour à afficher du 14/02/2025 au 31/12/2025
         const messages = [
             "Joyeuse Saint Valentin en avance mon amoureuse, je suis désolé qu'on soit obligé d'aller dans un Airbnb éteint, je te promets une bien meilleure pour l'année prochaine avec de vrais cadeaux et de vraies fleurs. Je t'aime de tout mon coeur ❤️",
+            "Bon là c'est le jour de la vraie Saint-Valentin, je sais pas encore ce qu'on a mangé mais j'espère que t'as aimé, et c'est la séance en duo couple omg",
+            "Premier jour sur un autre continent que toi 💔, je t'aime",
+            "Loin des yeux près du coeur, et tu peux pas être plus près vu que t'habites dedans... ❤️",
+            "Et dire que j'ai payé 700€ pour aller au soleil alors que t'en es un bien meilleur que lui..",
+            "Plus que 5 jours avant de se revoir, j'espère que je t'ai assez tenu au courant et que tu t'inquiètes pas ! Je t'aime ❤️",
+            "J-4 c'est bon la moitié est passée, ça se trouve je suis mort dans un accident de buggy et c'est le dernier message que tu verras de moi donc : Je t'aime ❤️",
+            "J-3 J'ai des images de toi nue dans ma tête et je peux même pas te toucher super....",
+            "J-2 Bon ça y'est le plus dur est passé j'espère que tu vis ta meilleure vie toute seule, y'a personne pour laisser trainer de la vaisselle sale au moins. Je t'aime ❤️",
+            "J-1 Demain c'est le grand jour, (ça se trouve mon compte à rebours est faux depuis le début et ducoup c'est faussé mdrrr)",
+            "Jour-J si je me suis pas fait voler mes organes en restant dans l'aéroport, on se voit tout à l'heure mon amoureuse ❤️",
+            "Là c'est le jour ou j'ai mon rdv visio avec pole emploi à 9h ça dure 1H le truc on aurait eu le temps de faire l'amour 10 fois..",
             "Je t'aime plus que toi tu ne m'aimes ❤️",
             "Je suis amoureux de toi Anna Blaszkiewicz (j'ai bien écrit ??)",
             "Hop hop hop nouveau jour où je suis amoureux de toi",
+            "Si le compte est bon aujourd'hui c'est la crémaillère de Chrystal, profite de la soirée je t'aime ❤️",
+            "Bon anniversaire Anna, 24 ans t'es la MILF dont je rêve on a 3 ans d'écart maintenant la honte pour toi berk tu sors avec des mineurs, ça me brise le coeur de pas être là à minuit et je sais même pas si j'aurais de l'argent pour un cadeau le jour même... J'espère qu'elles t'auront fait une soirée spéciale à la hauteur de la personne exceptionnelle que tu es. Je t'aime Anna.",
             "Tu me manques (ça se trouve le jour où tu vas voir celui là on sera ensemble...) ",
             "Ok chatGPT dis à Anna que je l'aime ",
             "Y'a un philosophe il a dit 'on comprend le sens de la vie uniquement quand on a trouvé une bonne raison de mourir' et il a pas tort je meurt pour toi tout les jours de l'année ",
             "Regarde ils ont fait un émoji à ton image :🌞",
             "Comment il va notre enfant ? t'sais le mec qui a aucune notion du temps ",
-            "Vu que c'est au hasard, j'ai rencontré ma belle-mère à ce jour ?",
+            "Bon mois-nniversaire à Gigi, 11 mois c'est çà ?",
             "Je t'aime plus que toi tu ne m'aimes (y'en aura plusieurs des comme ça",
             "T'es la plus belle chose qui me soit arrivée (après ça dépend si Paris a gagné la LDC le moment ou tu verras ce message tu seras la deuxième plus belle chose) 💕",
             "On va à la salle aujourd'hui ? Séance en couple on fait les jambes.... ",
@@ -70,7 +83,10 @@
             "Bon ça y'est on est millionaire et marié ou toujours pas ?",
             "Oh la chance que t'as aujourd'hui tu peux me demander tout ce que tu veux je dirais forcément oui.",
             "Te amo ! (ça veut dire je t'aime en Allemand)",
+            "3 mois ensemble (toujours si mes calculs sont bons...) 1/4 d'année avec toi ressenti 10 ans. Je t'aime imbécile",
             "Anton Alekseïevitch Silaïev, Formé au HK Sarov1, il rejoint les équipes de jeunes du Torpedo Nijni Novgorod. En 2022, il commence sa carrière junior avec la Tchaïka, équipe junior du Torpedo, dans la MHL, la ligue junior russe. Tu te demandes pourquoi j'écrit ça ? Bah même moi je sais pas, mais ce que je sait c'est que je t'aime !",
+            "Là c'est mon anniversaire donc comme cadeau je veux toi stp",
+            "Merci pour le cadeau (toi) c'est le plus bel anniversaire qu'on ai pu me faire (j'écris ça sans savoir vu que je le fais jamais)",
             
         ];
         
