--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Dancing Script', cursive;
             text-align: center;
             margin: 0;
             padding: 0;
