--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             justify-content: center;
             background: linear-gradient(135deg, #ff9a9e, #fad0c4);
             background-size: cover;
-            color: #fff;
+            color: #000;
         }
 
         .container {
