--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         p {
             font-size: 1.4rem;
             font-weight: bold;
-            color: #fff;
+            color: #000;
             background: rgba(255, 255, 255, 0.2);
             padding: 15px;
             border-radius: 10px;
