--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            background: url('image_2025-02-10_212757218.png') no-repeat center center fixed;
             background-size: cover;
             color: #000;
         }
