--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             align-items: center;
             justify-content: center;
             background: url('image_2025-02-10_212757218.png') no-repeat center center fixed;
-            background-size: cover;
+            background-position: bottom center;
+            background-size: contain;
             color: #000;
         }
 
