--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         }
 
         .container {
-            max-width: 500px;
-            padding: 30px;
-            background: rgba(255, 255, 255, 0.2);
+            max-width: 90%;
+            padding: 15px;
+            background: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(10px);
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             animation: fadeIn 2s ease-in-out;
         }
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 2.5rem;
+            font-size: 1.4rem;
             color: #ffe4e1;
             margin-bottom: 20px;
         }
