--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             console.warn("Il manque des messages pour couvrir jusqu'à fin 2025 ! Ajoutez-en.");
         }
 
-        const today = new Date(2025,1,10); 
+        const today = new Date(); 
         const dayIndex = Math.floor((today - startDate) / (1000 * 60 * 60 * 24));
         
         const messageOfTheDay = messages[dayIndex % messages.length];
