--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
+            min-height: 100vh;
             background: url('image_2025-02-10_212757218.png') no-repeat center center fixed;
             background-position: bottom center;
             background-size: contain;
