--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         h1 {
             font-family: 'Dancing Script', cursive;
             font-size: 1.4rem;
-            color: #ffe4e1;
+            color: #000;
             margin-bottom: 20px;
         }
 
