--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         }
 
         .container {
+            position: relative;
+            top: -50px;
             max-width: 90%;
             padding: 15px;
             background: rgba(255, 255, 255, 0.8);
