--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background: url('image_2025-02-10_212757218.png') no-repeat center center fixed;
             background-position: bottom center;
             background-size: contain;
-            color: #000;
+            background-color: #f5f5f5;
         }
 
         .container {
