--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         h1 {
             font-family: 'Dancing Script', cursive;
             font-size: 1.4rem;
-            color: #000;
+            color: #ad639c;
             margin-bottom: 20px;
         }
 
