--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             flex-direction: column;
             min-height: 100vh;
             background: url('image_2025-02-10_212757218.png') no-repeat center center fixed;
-            background-position: center;
+            background-position: bottom center;
             background-size: contain;
             background-color: #ad639c;
         }
