--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             background-position: bottom center;
             background-size: contain;
             background-color: #ad639c;
+            <audio id="background-music" autoplay loop>
+    <source src="nelly-dilemma-official-music-video-ft-kelly-rowland_3YpQv5Kw.mp3" type="audio/mpeg">
+    Votre navigateur ne supporte pas l'audio.
+</audio>
         }
 
         .container {
