--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
         const dayIndex = Math.floor((today - startDate) / (1000 * 60 * 60 * 24));
         
         const messageOfTheDay = messages[dayIndex % messages.length];
+        <button onclick="document.getElementById('background-music').play()">▶️ Jouer la musique</button>
+
         
         document.getElementById("message").innerText = messageOfTheDay;
     </script>
