--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
     <div class="container">
         <h1>💌 Message du jour 💌</h1>
         <p id="message"></p>
+        <button onclick="document.getElementById('background-music').play()" style="
+    margin-top: 15px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #d63384;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;">
+    ▶️ Jouer la musique
+</button>
     </div>
 
     <script>
