--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
     margin-top: 15px;
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #d63384;
+    background-color: #ad639c;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;">
-    ▶️ Jouer la musique
+    ▶️
 </button>
     </div>
 
