--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
 
         
         document.getElementById("message").innerText = messageOfTheDay;
+        <script>
+    document.addEventListener("visibilitychange", function() {
+        if (document.hidden) {
+            document.getElementById('background-music').pause();
+        }
+    });
+</script>
     </script>
 
 </body>
