--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             justify-content: center;
             flex-direction: column;
             min-height: 100vh;
-            background: url('image_2025-02-10_212757218.png') no-repeat center center fixed;
+            background: url('IMG_8037.jpeg') no-repeat center center fixed;
             background-position: bottom center;
             background-size: contain;
             background-color: #ad639c;
