--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             "Premier jour sur un autre continent que toi 💔, je t'aime",
             "Loin des yeux près du coeur, et tu peux pas être plus près vu que t'habites dedans... ❤️",
             "Et dire que j'ai payé 700€ pour aller au soleil alors que t'en es un bien meilleur que lui..",
-            "Plus que 5 jours avant de se revoir, j'espère que je t'ai assez tenu au courant et que tu t'inquiètes pas ! Je t'aime ❤️",
+            "T'as vu j'ai changé !! Je t'aime Anna et c'est inimaginable que tu m'aimes +, je pense que tu réalises vraiment pas à quel point t'es incroyable et que le jour ou tu t'en rendras compte, tu réaliseras que tu mérites 100x mieux que moi. Je suis tellement entre 2 chaises, parce que j'aimerais que tu te rendes compte de la personne incroyable que tu es, mais jamais de la vie je voudrais vivre sans toi... Je t'aime mon coeur ❤️",
             "J-4 c'est bon la moitié est passée, ça se trouve je suis mort dans un accident de buggy et c'est le dernier message que tu verras de moi donc : Je t'aime ❤️",
             "J-3 J'ai des images de toi nue dans ma tête et je peux même pas te toucher super....",
             "J-2 Bon ça y'est le plus dur est passé j'espère que tu vis ta meilleure vie toute seule, y'a personne pour laisser trainer de la vaisselle sale au moins. Je t'aime ❤️",
