--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             "Jour-J si je me suis pas fait voler mes organes en restant dans l'aéroport, on se voit tout à l'heure mon amoureuse ❤️",
             "Là c'est le jour ou j'ai mon rdv visio avec pole emploi à 9h ça dure 1H le truc on aurait eu le temps de faire l'amour 10 fois..",
             "Je t'aime plus que toi tu ne m'aimes ❤️",
-            "Je suis amoureux de toi Anna Blaszkiewicz (j'ai bien écrit ??)",
+            "Je suis amoureux de toi Anna Blaszkiewicz (j'ai bien écrit ??) Désolé pour la version de moi d'aujourd'hui et de pas pouvoir mettre des mots sur ce que j'ai.",
             "Hop hop hop nouveau jour où je suis amoureux de toi",
             "Si le compte est bon aujourd'hui c'est la crémaillère de Chrystal, profite de la soirée je t'aime ❤️",
             "Bon anniversaire Anna, 24 ans t'es la MILF dont je rêve on a 3 ans d'écart maintenant la honte pour toi berk tu sors avec des mineurs, ça me brise le coeur de pas être là à minuit et je sais même pas si j'aurais de l'argent pour un cadeau le jour même... J'espère qu'elles t'auront fait une soirée spéciale à la hauteur de la personne exceptionnelle que tu es. Je t'aime Anna.",
