--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             "Si le compte est bon aujourd'hui c'est la crémaillère de Chrystal, profite de la soirée je t'aime ❤️",
             "Bon anniversaire Anna, 24 ans t'es la MILF dont je rêve on a 3 ans d'écart maintenant la honte pour toi berk tu sors avec des mineurs, ça me brise le coeur de pas être là à minuit et je sais même pas si j'aurais de l'argent pour un cadeau le jour même... J'espère qu'elles t'auront fait une soirée spéciale à la hauteur de la personne exceptionnelle que tu es. Je t'aime Anna. Tu sais pas comment j'ai la haine ça fait longtemps que j'ai pas été comme çà. Je suis désolé de pas réussir à contenir tout ça et que ça détaigne comme ça. Je vais faire de mon mieux pour pas être comme ça le jour de ton anniversaire mais ça va être compliqué je le sais. Je suis mélangé entre la haine et la tristesse et ça va être encore plus compliqué de faire le faux cul demain pendant le brunch. Je t'aime de tout mon coeur et ça cessera jamais c'est sur et certain. J'espère de tout mon coeur qu'il s'est rien passé à la soirée... ",
             "Tu me manques (ça se trouve le jour où tu vas voir celui là on sera ensemble...) ",
-            "Ok chatGPT dis à Anna que je l'aime ",
+            "Ok chatGPT dis à Anna que je l'aime. Bon courage pour aujourd'hui ma star t'es forte 🫶🏼 ",
             "Y'a un philosophe il a dit 'on comprend le sens de la vie uniquement quand on a trouvé une bonne raison de mourir' et il a pas tort je meurt pour toi tout les jours de l'année ",
             "Regarde ils ont fait un émoji à ton image :🌞",
             "Comment il va notre enfant ? t'sais le mec qui a aucune notion du temps ",
