--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             "On va à la salle aujourd'hui ? Séance en couple on fait les jambes.... ",
             "Y'a pas assez de mots pour dire ce que je ressens pour toi sah ",
             "Salut, ça fait 15 ans qu'on est ensemble aujourd'hui mon amoureuse !",
-            "Tu te rends compte que tu rends chaque moment ordinaire tellement spécial espèce sorcière",
+            "Tu te rends compte que tu rends chaque moment ordinaire tellement spécial espèce de sorcière",
             "T'imagines que je dois écrire 322 phrases différentes pour te dire que je t'aime sans écrire la même chose chaque jour zebi le boloss",
             "Oh la honte il est amoureux !!! Oui.",
             "Tu veux m'épouser ?❤️",
