--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <h1>💌 Message du jour 💌</h1>
         <p id="message"></p>
          <button onclick="montrerVideo()">▶️</button>
+        <div id="video-container"></div>
     </div>
 
     <script>
