--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       videoContainer.style.display = "block";
       videoContainer.innerHTML = `
         <iframe width="300" height="300"
-          src="https://www.youtube.com/embed/k-d_SN1MX8w?autoplay=1"
+          src="https://www.youtube.com/embed/k-d_SN1MX8w?autoplay=1&controls=0&modestbranding=1&rel=0showinfo=0"
           title="YouTube video"
           frameborder="0"
           allow="autoplay; encrypted-media"
